--- a/css/common.css
+++ b/css/common.css
@@ -6,58 +6,63 @@
 		body{
 			width:100%;
 			font-family:'微软雅黑','宋体',sans-serif;
-			background: #bfe3f9;
+			background: #fff;
 		}
 		.header{
 			width:100%;
-			height:66px;
-			background: #e65b61;
+			height:80px;
+			line-height: 80px;
+			background: #fff;
+			border-bottom:1px solid #ddd;
 		}
 		.header-cont{
-			width:900px;
+			width:1200px;
 			height:66px;
 			margin:0 auto;
 			line-height: 66px;
-			font-size:24px;
+			font-size:20px;
 			color:#fff;
 		}
 		.header-cont .logo{
 			float:left;
-			width:46px;
-			height:46px;
-			margin-top:10px;
-			margin-left: 20px;
-			border-radius: 5px;
+			margin-top:7px;
+			width:66px;
+			height:66px;
+		}
+		.logo img{
+			width:100%;
+			height:100%;
 		}
 		.header-cont .nav{
 			float:left;
-			margin-left:266px;
+			margin-left:320px;
 		}
 		.header-cont .nav li{
 			display:inline-block;
-			height:66px;
+			height:80px;
+			line-height: 80px;
 			margin-right:30px;
 		}
-		
-		.header-cont .nav li a{
-			height:60px;
-			text-decoration: none;
-			color:#fff;
+		.header-cont .nav li.active a{
+			color:#ff8c69;
 		}
-		.header-cont .nav li a.active{
-			border-bottom:3px solid #fff;
+		.header-cont .nav li a{
+			height:80px;
+			line-height: 80px;
+			text-decoration: none;
+			color:#888;
 		}
 		.header-cont .nav li:hover a{
-			border-bottom:3px solid #fff;
+			color:#ff8c69;
 		}
 		.footer{
-			height:40px;
+			height:80px;
 			width:100%;
-			background: #e65b61;
-			font-size:16px;
+			background: rgba(0,0,0,.6);
+			font-size:18px;
 			color:#fff;
 			text-align:center;
-			line-height: 40px;
+			line-height: 80px;
 		}
 		.footer .tongji{
 			color:#fff;
