--- a/css/index.css
+++ b/css/index.css
@@ -111,6 +111,12 @@ body{
 	height:200px;
 	border:1px solid #ddd;
 }
+.cont-box .host .host-box:hover{
+	border:1px solid #ff8c69;
+}
+.cont-box .host .host-box:hover>a{
+	color: #ff8c69;
+}
 .cont-box .host .host-box>a{
 	display:block;
 	line-height: 200px;
