--- a/css/common.css
+++ b/css/common.css
@@ -59,6 +59,9 @@
 		.footer{
 			height:80px;
 			width:100%;
+			// background: #000; 
+			// opacity: 0.6; 
+			// filter:alpha(opacity=60);
 			background: rgba(0,0,0,.6);
 			font-size:18px;
 			color:#fff;
@@ -79,3 +82,20 @@
 		.clearfix{
 			zoom:1;
 		}
+		.totop{
+			position:fixed;
+			right:20px;
+			bottom:100px;
+			display:none;
+			width:50px;
+			height:50px;
+			background:#fff url(../images/gotop.png) no-repeat 16px 15px;
+			border:solid 1px #f9f9f8;
+			border-radius:6px;box-shadow:0 1px 1px rgba(0, 0, 0, 0.2);
+			cursor:pointer;
+		}
+.totop:hover{
+	height:50px;
+	background-position:16px 16px;
+	box-shadow:0 1px 1px rgba(0, 0, 0, 0.3);
+}
