--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,9 @@ body{
 	bottom:0;
 	width:100%;
 	height:120px;
+	// background: #000; 
+	// opacity: 0.6; 
+	// filter:alpha(opacity=60);
 	background: rgba(0,0,0,.6);
 	color:#fff;
 	font-size:38px;
@@ -147,9 +150,17 @@ body{
 .article-cont ul li .img-box img{
 	width:100%;
 	height:100%;
+	-webkit-transition:all 1s;
+	-moz-transition:all 1s;
+	-o-transition:all 1s;
+	-ms-transition:all 1s;
 	transition:all 1s;
 }
 .article-cont ul li .img-box:hover img{
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	-ms-transform: scale(1.2);
 	transform: scale(1.2);
 }
 .article-cont ul li a{
