--- a/css/list.css
+++ b/css/list.css
@@ -34,9 +34,17 @@
 .content ul li .img-box img{
 	width:100%;
 	height:100%;
+	-webkit-transition:all 1s;
+	-moz-transition:all 1s;
+	-o-transition:all 1s;
+	-ms-transition:all 1s;
 	transition:all 1s;
 }
 .content ul li .img-box img:hover{
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	-ms-transform: scale(1.5);
 	transform: scale(1.5);
 }
 .content ul li a{
