--- a/css/common.css
+++ b/css/common.css
@@ -1,99 +1,100 @@
 
 *{
-			margin:0;
-			padding:0;
-		}
-		body{
-			width:100%;
-			min-width: 1200px;
-			font-family:'微软雅黑','宋体',sans-serif;
-			background: #fff;
-		}
-		.header{
-			width:100%;
-			height:80px;
-			line-height: 80px;
-			background: #fff;
-			border-bottom:1px solid #ddd;
-		}
-		.header-cont{
-			width:1200px;
-			height:66px;
-			margin:0 auto;
-			line-height: 66px;
-			font-size:20px;
-			color:#fff;
-		}
-		.header-cont .logo{
-			float:left;
-			margin-top:7px;
-			width:66px;
-			height:66px;
-		}
-		.logo img{
-			width:100%;
-			height:100%;
-		}
-		.header-cont .nav{
-			float:left;
-			margin-left:320px;
-		}
-		.header-cont .nav li{
-			display:inline-block;
-			height:80px;
-			line-height: 80px;
-			margin-right:30px;
-		}
-		.header-cont .nav li.active a{
-			color:#ff8c69;
-		}
-		.header-cont .nav li a{
-			height:80px;
-			line-height: 80px;
-			text-decoration: none;
-			color:#888;
-		}
-		.header-cont .nav li:hover a{
-			color:#ff8c69;
-		}
-		.footer{
-			height:80px;
-			width:100%;
-			// background: #000; 
-			// opacity: 0.6; 
-			// filter:alpha(opacity=60);
-			background: rgba(0,0,0,.6);
-			font-size:18px;
-			color:#fff;
-			text-align:center;
-			line-height: 80px;
-		}
-		.footer .tongji{
-			color:#fff;
-			text-decoration: none;
-		}
-		.clearfix:after{
-			content:'.'; 
-			display:block;
-			height:0;
-			clear:both;
-			visibility:hidden 
-		}
-		.clearfix{
-			zoom:1;
-		}
-		.totop{
-			position:fixed;
-			right:20px;
-			bottom:100px;
-			display:none;
-			width:50px;
-			height:50px;
-			background:#fff url(../images/gotop.png) no-repeat 16px 15px;
-			border:solid 1px #f9f9f8;
-			border-radius:6px;box-shadow:0 1px 1px rgba(0, 0, 0, 0.2);
-			cursor:pointer;
-		}
+	margin:0;
+	padding:0;
+}
+body{
+	width:100%;
+	min-width: 1200px;
+	font-family:'微软雅黑','宋体',sans-serif;
+	background: #fff;
+}
+.header{
+	width:100%;
+	height:80px;
+	line-height: 80px;
+	background: #fff;
+	border-bottom:1px solid #ddd;
+}
+.header-cont{
+	width:1200px;
+	height:66px;
+	margin:0 auto;
+	line-height: 66px;
+	font-size:20px;
+	color:#fff;
+}
+.header-cont .logo{
+	float:left;
+	margin-top:7px;
+	width:66px;
+	height:66px;
+}
+.logo img{
+	width:100%;
+	height:100%;
+}
+.header-cont .nav{
+	float:left;
+	margin-left:320px;
+}
+.header-cont .nav li{
+	display:inline-block;
+	height:80px;
+	line-height: 80px;
+	margin-right:30px;
+}
+.header-cont .nav li.active a{
+	color:#ff8c69;
+}
+.header-cont .nav li a{
+	height:80px;
+	line-height: 80px;
+	text-decoration: none;
+	color:#888;
+}
+.header-cont .nav li:hover a{
+	color:#ff8c69;
+}
+.footer{
+	height:80px;
+	width:100%;
+	// background: #000; 
+	// opacity: 0.6; 
+	// filter:alpha(opacity=60);
+	background: rgba(0,0,0,.6);
+	font-size:18px;
+	color:#fff;
+	text-align:center;
+	line-height: 80px;
+}
+.footer .tongji{
+	color:#fff;
+	text-decoration: none;
+}
+.clearfix:after{
+	content:'.'; 
+	display:block;
+	height:0;
+	clear:both;
+	visibility:hidden 
+}
+.clearfix{
+	zoom:1;
+}
+.totop{
+	position:fixed;
+	right:20px;
+	bottom:180px;
+	display:none;
+	width:50px;
+	height:50px;
+	background:#fff url(../images/gotop.png) no-repeat 16px 15px;
+	border:solid 1px #f9f9f8;
+	border-radius:6px;
+	box-shadow:0 1px 1px rgba(0, 0, 0, 0.2);
+	cursor:pointer;
+}
 .totop:hover{
 	height:50px;
 	background-position:16px 16px;
