--- a/css/index.css
+++ b/css/index.css
@@ -111,21 +111,25 @@ body{
 	float:left;
 	margin-right:50px;
 	width:260px;
-	height:200px;
-	border:1px solid #ddd;
+	height:260px;
+	background: url(../images/name_bg.jpg) no-repeat;
+	// border:1px solid #ddd;
 }
 .cont-box .host .host-box:hover{
-	border:1px solid #ff8c69;
+	// border:1px solid #ff8c69;
 }
-.cont-box .host .host-box:hover>a{
+// .cont-box .host .host-box:hover>a{
+// 	color: #ff8c69;
+// }
+.cont-box .host:hover .host-box>a{
 	color: #ff8c69;
 }
 .cont-box .host .host-box>a{
 	display:block;
-	line-height: 200px;
+	line-height: 260px;
 	text-align: center;
-	font-size:130px;
-	color:#999;
+	font-size:160px;
+	color:#888;
 	text-decoration:none;
 	cursor:pointer;
 }
