--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+// @font-face{
+// 	font-family:BebasNeue-webfont;
+// 	src:url("../font/BebasNeue-webfont.ttf");
+// }
+// .name{
+// 	fontsize:;
+// 	font-family:BebasNeue-webfont;
+// }
 body{
 	min-width: 1400px;
 }
@@ -118,12 +126,24 @@ body{
 	display:block;
 	line-height: 260px;
 	text-align: center;
-	font-size:160px;
+	font-size:200px;
 	font-weight: 100;
 	color:#999;
 	text-decoration:none;
 	cursor:pointer;
 }
+// .cont-box .host .host-box.name_1{
+// 	background: url(../images/name_1.jpg) no-repeat;
+// }
+// .cont-box .host .host-box.name_2{
+// 	background: url(../images/name_2.jpg) no-repeat;
+// }
+// .cont-box .host .host-box.name_3{
+// 	background: url(../images/name_3.jpg) no-repeat;
+// }
+// .cont-box .host .host-box.name_4{
+// 	background: url(../images/name_4.jpg) no-repeat;
+// }
 .article-cont ul{
 	margin-right:-100px;
 	list-style: none;
