--- a/css/list.css
+++ b/css/list.css
@@ -33,7 +33,25 @@
 	width:330px;
 	height:200px;
 	overflow: hidden;
+	// position:relative;
 }
+// .content ul li .img-box .cover{
+// 	display:none;
+// 	height:200px;
+// 	width:330px;
+// 	position:absolute;
+// 	top:0;
+// 	left:0;
+// 	background: rgba(1,1,1,.3);
+// 	line-height: 200px;
+// 	text-align: center;
+// 	font-size: 24px;
+// 	color:#fff;
+// 	transition:all 1s;
+// }
+// .content ul li .img-box:hover .cover{
+// 	display:block;
+// }
 .content ul li .img-box img{
 	width:100%;
 	height:100%;
