--- a/css/about.css
+++ b/css/about.css
@@ -4,93 +4,51 @@
 .content{
 	margin:0 auto;
 	width:900px;
-	min-height:666px;
+	min-height:555px;
 	margin-top:110px;
 	margin-bottom:30px;
 	color:teal;
 	line-height: 24px;
 }
 .content h1{
-	margin-bottom:30px;
+	margin-bottom:10px;
 	color:#666;
+	font-size:18px;
 	font-weight: normal;
+	border-bottom: 1px solid #ddd;
 }
 .content .about{
 	margin-bottom:70px;
 }
-.content .about .center-text{
-	padding-bottom:30px;
-	font-size:20px;
-	line-height: 40px;
-	text-align: center;
-	border-bottom:1px solid #ddd;
-}
-.content .about .center-text p:hover{
-	color:#ff8c69;
-}
-.content .about .center-text h3{
-	margin-bottom:20px;
-	font-size:32px;
-	color:#777;
-	font-weight:normal;
-}
-.content .about .center-text h3 .name{
-	font-size:22px;
-	color:#999;
-}
-.content .about .hd-text{
-	padding-left:100px;
-	padding-top:30px;
-	padding-bottom:30px;
-	font-size:30px;
-	line-height: 40px;
-	border-bottom:1px solid #ddd;
-	border-left:5px solid #ddd;
-}
-.content .about .indent{
-	text-indent: 60px;
+.content .about p{
+	font-size:18px;
+	color:#888;
 }
 .content .msg{
-	min-height:280px;
-	margin-left: 60px;
 	margin-bottom:30px;
-	font-size:24px;
-	overflow: hidden;
+	font-size:18px;
+	color:#888;
 }
 .content .msg .msg-text{
 	float:left;
-	height:280px;
-	width:500px;
-}
-.content .msg p{
-	margin-bottom:15px;
-}
-.content .msg p span{
-	color:#ff8c69;
+	width:541px;
 }
 .content .msg p a{
+	color:#888;
 	text-decoration: none;
-	color:#ff8c69;
 }
 .content p{
 	color:#999;
 }
-.content .msg .img-box{
-	float:right;
-	width:160px;
-	height:160px;
+.content p.qq{
+	margin-top:15px;
 }
-.content .msg .img-box img{
+.content .img-box{
+	float:left;
+	width:90px;
+	height:90px;
+}
+.content .img-box img{
 	width:100%;
 	height:100%;
-}
-.content .declare{
-	text-align: justify;
-}
-.content span.show{
-	color:#666;
-}
-.msg-text .tips{
-	color:green;
-	font-size:16px;
 }
