--- a/css/common.css
+++ b/css/common.css
@@ -33,6 +33,7 @@ body{
 .logo img{
 	width:100%;
 	height:100%;
+	border:none;
 }
 .header-cont .nav{
 	float:left;
@@ -41,6 +42,9 @@ body{
 .header-cont .nav li{
 	display:inline-block;
 	height:80px;
+	*display:inline;
+	zoom:1;
+	_height:80px;
 	line-height: 80px;
 	margin-right:30px;
 }
@@ -60,13 +64,13 @@ body{
 	padding-top:32px;
 	height:80px;
 	width:100%;
-	// background: #000; 
-	// opacity: 0.6; 
-	// filter:alpha(opacity=60);
 	background: rgba(0,0,0,.6);
 	font-size:18px;
 	color:#fff;
 	text-align:center;
+	background: #000; 
+	opacity: 0.6; 
+	filter:alpha(opacity=60);
 	// line-height: 80px;
 }
 .footer p.copyright{
