--- a/css/common.css
+++ b/css/common.css
@@ -71,7 +71,6 @@ body{
 	background: #000; 
 	opacity: 0.6; 
 	filter:alpha(opacity=60);
-	// line-height: 80px;
 }
 .footer p.copyright{
 	margin-bottom:6px;
@@ -115,4 +114,62 @@ a:active{
 	height:50px;
 	background-position:16px 16px;
 	box-shadow:0 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+
+/*浏览器版本更新*/
+.browserupdate{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:40px;
+    text-align: center;
+    line-height: 40px;
+    font-size:14px;
+    background: url(../images/browser/iebg.gif);
+    color:#333;
+    z-index: 9999;
+}
+.browserupdate i{
+    display:inline-block;
+    width:12px;
+    height:14px;
+    // vertical-align:-2px;
+    vertical-align:text-top;
+    margin-top:2px;
+    margin-right:5px;
+    background: url(../images/browser/iefixed-sprite.png) no-repeat;
+}
+.browserupdate a{
+    display:inline-block;
+    margin-left:20px;
+    color:#39b94e;
+}
+.browserupdate .right{
+    position:absolute;
+    top:0;
+    right:20px;
+    color:#666;
+}
+.browserupdate .right a{
+    display:inline-block;
+    margin-left:6px;
+    vertical-align: middle;
+    color:#666;
+}
+.browserupdate .right .close{
+    width:16px;
+    height:16px;
+    text-align: center;
+    line-height: 16px;
+    border-radius: 50%;
+}
+.browserupdate .right .close>i{
+    height:8px;
+    width:8px;
+    margin-top:3px;
+    // vertical-align: 1px;
+    vertical-align:text-top;
+    background: url(../images/browser/iefixed-sprite.png) 0 -24px no-repeat;
 }
