--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .header-cont{
-	width:900px;
+	width:1000px;
 }
 .content{
 	margin:0 auto;
@@ -43,6 +43,9 @@
 .content p{
 	color:#999;
 }
+.content .msg .dacheng{
+	text-decoration: none;
+}
 .content h1.guanzhu{
 	margin-bottom:0;
 	border-bottom:none;
@@ -57,6 +60,42 @@
 	height:100%;
 	border:none;
 }
-#uyan-copyright .Copyright>a{
-	display:none;
+
+
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+.btn-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
+.btn-default:focus{
+	color:#333;
+	background-color:#e6e6e6;
+	border-color:#8c8c8c;
+	outline: none;
+}
+.btn-default:hover{
+	color:#333;
+	background-color:#e6e6e6;
+	border-color:#adadad
 }
