--- a/css/about.css
+++ b/css/about.css
@@ -40,6 +40,9 @@
 	color:#888;
 	text-decoration: none;
 }
+// .content .msg .msg-text .dacheng{
+// 	margin-top:30px;
+// }
 .content p{
 	color:#999;
 }
