--- a/css/about.css
+++ b/css/about.css
@@ -33,6 +33,9 @@
 	float:left;
 	width:541px;
 }
+.content .msg .msg-text p{
+	margin-bottom:6px;
+}
 .content .msg .msg-text a:hover{
 	color:#ff8c69;
 }
@@ -40,9 +43,9 @@
 	color:#888;
 	text-decoration: none;
 }
-// .content .msg .msg-text .dacheng{
-// 	margin-top:30px;
-// }
+.content .msg .msg-text .dacheng{
+	margin-top:30px;
+}
 .content p{
 	color:#999;
 }
