--- a/css/common.css
+++ b/css/common.css
@@ -116,7 +116,25 @@ a:active{
 	box-shadow:0 1px 1px rgba(0, 0, 0, 0.3);
 }
 
-
+.weixin{
+	position:fixed;
+	right:20px;
+	top:50%;
+	margin-top:-25px;
+	width:50px;
+	height:50px; 
+}
+.weixin a{
+	display:block;
+	width:100%;
+	height:100%;
+	cursor:pointer;
+}
+.weixin a img{
+	width:100%;
+	height:100%;
+	cursor:pointer;
+}
 /*浏览器版本更新*/
 .browserupdate{
     position:fixed;
