--- a/css/common.css
+++ b/css/common.css
@@ -60,6 +60,29 @@ body{
 .header-cont .nav li:hover a{
 	color:#ff8c69;
 }
+.bottom_nav{
+	width:100%;
+	padding: 10px 0;
+	padding-top:30px;
+	// background: #272a30;
+	background: rgba(0,0,0,.6);
+	color:#fff;
+	text-align: center;
+}
+.bottom_nav a{
+	color:#fff;
+	font-size:16px;
+	text-decoration: none;
+}
+.bottom_nav>a:hover{
+	color:#ff8c69;
+}
+.bottom_nav .friend_link{
+	margin-top:10px;
+}
+.bottom_nav .friend_link a:hover{
+	color:#ff8c69;
+}
 .footer{
 	padding-top:32px;
 	height:80px;
