--- a/css/common.css
+++ b/css/common.css
@@ -84,7 +84,8 @@ body{
 	color:#ff8c69;
 }
 .footer{
-	padding-top:32px;
+	padding-top:0;
+	// padding-top:32px;
 	height:80px;
 	width:100%;
 	background: rgba(0,0,0,.6);
