--- a/css/about.css
+++ b/css/about.css
@@ -53,11 +53,13 @@
 	color:#999;
 }
 .content h1.guanzhu{
+	width:160px;
 	margin-bottom:5px;
 	border-bottom:none;
+	text-align: center;
 }
 .content .img-box{
-	margin-left:-5px;
+	// margin-left:-5px;
 	width:160px;
 	height:160px;
 }
@@ -65,6 +67,10 @@
 	width:100%;
 	height:100%;
 	border:none;
+}
+.content .tip-text{
+	fnt-size:14px;
+	color:#999;
 }
 
 
