change college page

--- a/css/college.css
+++ b/css/college.css
@@ -4,7 +4,7 @@
 .scrolltext{
 	width:1050px;
 	height:80px;
-	margin:30px auto;
+	margin:0 auto;
 	line-height: 80px;
 	font-size:20px;
 	color:#ff8963;
