--- a/css/list.css
+++ b/css/list.css
@@ -90,3 +90,30 @@
 .content ul li a:hover{
 	color:#ff8c69;
 }
+.lianxi{
+	position:fixed;
+	top:50%;
+	right:10px;
+	margin-top:-25px;
+	padding:5px 0;
+	width:55px;
+	text-align: center;
+	border:1px solid #eee;
+	color:#666;
+	cursor:pointer;
+}
+.erweima{
+	position:fixed;
+	top:50%;
+	right:80px;
+	margin-top:-100px;
+	width:200px;
+	height:200px;
+	border:1px solid #ff8962;
+	display:none;
+}
+.erweima img{
+	width:100%;
+	border:none;
+	z-index: 
+}
