--- a/mobile/css/index.css
+++ b/mobile/css/index.css
@@ -92,14 +92,6 @@ body{
 .scrolltext .text{
 	margin-left:20px;
 }
-.title{
-	font-size:28px;
-	color:#666;
-	text-align: center;
-}
-.title .fa{
-	color:#fc6a96;
-}
 .list-cont .article-list{
 	display:block;
 	margin:20px 0;
@@ -121,6 +113,12 @@ body{
 .list-cont a span{
 	color:#999;
 	font-size:16px;
+}
+.tips{
+	margin:30px 0;
+	text-align: center;
+	font-size:20px;
+	color:#999;
 }
 .tellyou{
 	padding:10px 15px;
