change scrolltext bug

--- a/css/college.css
+++ b/css/college.css
@@ -2,17 +2,27 @@
 	margin-left:75px;
 }
 .scrolltext{
-	width:1050px;
+	position:relative;
+	width:1050px; 
+	margin:0 auto; 
 	height:80px;
-	margin:0 auto;
-	line-height: 80px;
-	font-size:20px;
-	color:#ff8963;
-	text-align: center;
-	border-bottom:1px dashed #999;
-	border-radius: 5px;
+	border-bottom: 1px dashed #999;
 	overflow: hidden;
-	cursor:pointer;
+}
+.scrolltext ul{
+	position:absolute;
+	top:0;
+	left:0;
+}
+.scrolltext ul li{
+	float:left;
+	list-style: none;
+	width:3500px;
+	height:80px;
+	line-height: 80px;
+	color:#ff8963;
+	font-size:20px;
+	text-indent: 1050px;
 }
 .content{
 	margin:0 auto;
@@ -46,25 +56,7 @@
 	width:330px;
 	height:200px;
 	overflow: hidden;
-	// position:relative;
 }
-// .content ul li .img-box .cover{
-// 	display:none;
-// 	height:200px;
-// 	width:330px;
-// 	position:absolute;
-// 	top:0;
-// 	left:0;
-// 	background: rgba(1,1,1,.3);
-// 	line-height: 200px;
-// 	text-align: center;
-// 	font-size: 24px;
-// 	color:#fff;
-// 	transition:all 1s;
-// }
-// .content ul li:hover .cover{
-// 	display:block;
-// }
 .content ul li .img-box img{
 	width:100%;
 	height:100%;
