--- a/mobile/css/index.css
+++ b/mobile/css/index.css
@@ -101,10 +101,9 @@ body{
 .list-cont .article-list{
 	display:block;
 	margin:20px 0;
-	padding:0 15px;
+	padding:15px 15px;
 	width:100%;
-	height:66px;
-	line-height: 66px;
+	height:95px;
 	border:1px solid #eee;
 	border-radius: 6px;
 	white-space:nowrap;
@@ -112,13 +111,20 @@ body{
 	text-overflow:ellipsis;
 }
 .list-cont .article-list a{
+	display:block;
+	margin-bottom:6px;
 	font-size:24px;
 	color:#777;
 	text-decoration: none;
 }
-.list-cont a span{
+.list-cont .msg span{
+	display:inline-block;
+	margin-right:32px;
 	color:#999;
-	font-size:16px;
+	font-size:14px;
+}
+.list-cont .msg span i{
+	color:#ff8c69;
 }
 .tips{
 	margin:30px 0;
@@ -177,7 +183,7 @@ body{
 		padding:0 60px;
 	}
 	.list-cont .article-list{
-		padding:0 76px;
+		padding:15px 76px;
 	}
 	.flexslider{
 		margin-bottom:5px;
