--- a/mobile/css/index.css
+++ b/mobile/css/index.css
@@ -100,15 +100,13 @@ body{
 }
 .list-cont .article-list{
 	display:block;
-	margin:20px 0;
+	margin:15px 15px;
 	padding:15px 15px;
-	width:100%;
+	// width:100%;
 	height:95px;
 	border:1px solid #eee;
 	border-radius: 6px;
-	white-space:nowrap;
-	overflow:hidden; 
-	text-overflow:ellipsis;
+	
 }
 .list-cont .article-list a{
 	display:block;
@@ -116,6 +114,9 @@ body{
 	font-size:24px;
 	color:#777;
 	text-decoration: none;
+	white-space:nowrap;
+	overflow:hidden; 
+	text-overflow:ellipsis;
 }
 .list-cont .msg span{
 	display:inline-block;
@@ -165,6 +166,15 @@ body{
 	width:100%;
 }
 @media screen and (max-width:320px){
+	.list-cont .article-list{
+		height:86px;
+	}
+	.list-cont .article-list a{
+		font-size:20px;
+	}
+	.list-cont .msg span{
+		margin-right:20px;
+	}
 	.website{
 		display:none;
 	}
@@ -183,6 +193,7 @@ body{
 		padding:0 60px;
 	}
 	.list-cont .article-list{
+		margin:20px 60px;
 		padding:15px 76px;
 	}
 	.flexslider{
