change index page banner bug

--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,7 @@ body{
 	left:0px; 
 	background:none; 
 	top:0px; 
+	border:0;
 }
 .bar-right{ 
 	position:absolute;
@@ -49,6 +50,7 @@ body{
 	right:0px; 
 	background:none; 
 	top:0px; 
+	border:0;
 }
 .bar-left em{ 
 	display:block; 
