--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,16 @@ body{
 	top:0px; 
 	border:0;
 }
+// a点击出现框
+a:hover,a:active,a:visited,a:link,a:focus{
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	-webkit-tap-highlight-color:transparent;
+	outline: none;
+	background: none;
+	text-decoration: none;
+	border:none;
+	-webkit-appearance:none;
+}
 .bar-left em{ 
 	display:block; 
 	width:50px; 
