--- a/css/index.css
+++ b/css/index.css
@@ -9,82 +9,32 @@
 body{
 	min-width: 1200px;
 }
-.banner{ 
+/* banner begin */
+.banner {
 	width:100%;
-	min-width: 1200px; 
-	height:750px; 
+	min-width: 1200px;
+	height:725px;
+	margin:0 auto;
 	margin-bottom:60px; 
-	overflow:hidden; 
-	position:relative;
-	font-size:0
+	position: relative;
+	font-size:0;
+	overflow: hidden;
 }
-.b-img{
-	height:500px;  
-	position:absolute; 
-	left:0; 
+.banner_main{
+	width:100%;
+	height:725px;
+}
+.banner_main li{
+	height:725px;
+}
+.banner_main li img {
+	width:100%;
+	min-height:725px;
+	position:absolute;
+	left:0;
 	top:0;
 }
-.b-img .img-list{
-	position:relative;
-	display:block; 
-	height:750px; 
-	float:left;
-}
-.bar-left{ 
-	position:absolute; 
-	z-index:1; 
-	display:block; 
-	width:100px; 
-	height:100%; 
-	left:0px; 
-	background:none; 
-	top:0px; 
-	border:0;
-}
-.bar-right{ 
-	position:absolute;
-	z-index:1; 
-	display:block; 
-	width:100px; 
-	height:100%; 
-	right:0px; 
-	background:none; 
-	top:0px; 
-	border:0;
-}
-// a点击出现框
-a:hover,a:active,a:visited,a:link,a:focus{
-	-webkit-tap-highlight-color:rgba(0,0,0,0);
-	-webkit-tap-highlight-color:transparent;
-	outline: none;
-	background: none;
-	text-decoration: none;
-	border:none;
-	-webkit-appearance:none;
-}
-.bar-left em{ 
-	display:block; 
-	width:50px; 
-	height:100px; 
-	background:url(../images/arrow.png) 0px 0px no-repeat; 
-	margin:0 auto; 
-	margin-top:325px;
-}
-.bar-right em{ 
-	display:block; 
-	width:50px; 
-	height:100px; 
-	background:url(../images/arrow.png) -50px 0px no-repeat; 
-	margin:0 auto; 
-	margin-top:325px;
-}
-.bar-left .emcss{ 
-	background-position:0px -100px;
-}
-.bar-right .emcss{ 
-	background-position:-50px -100px;
-}
-.banner .b-img .img-list .text{
+.banner_main li .text{
 	position: absolute;
 	left:0;
 	bottom:0;
@@ -100,7 +50,7 @@ a:hover,a:active,a:visited,a:link,a:focus{
 	opacity: 0.6; 
 	filter:alpha(opacity=60);
 }
-.banner .text a{
+.banner_main li .text a{
 	display:block;
 	width:100%;
 	height:120px;
@@ -108,9 +58,57 @@ a:hover,a:active,a:visited,a:link,a:focus{
 	text-decoration:none;
 	cursor:pointer;
 }
-.banner .text:hover a{
+.banner_main li .text a:hover{
 	color:#ff8c69;
 }
+.banner_left {
+	width:100px;
+	height:200px;
+	position: absolute;
+	left:0;
+	top:50%;
+	margin-top:-100px;
+	display:none;
+	overflow: hidden;
+	cursor: pointer;
+}
+.banner_left em{
+	display:block;
+	width:50px;
+	height:100px;
+	margin:0 auto;
+	margin-top:50px;
+	background:url(../images/arrow.png) no-repeat 0 0;
+}
+.banner_left em.banner_left1 {
+	background:url(../images/arrow.png) no-repeat 0px -100px;
+}
+.banner_right {
+	width:100px;
+	height:200px;
+	position: absolute;
+	right:0;
+	top:50%;
+	margin-top:-100px;
+	display:none;
+	overflow: hidden;
+	cursor: pointer;
+}
+.banner_right em{
+	display:block;
+	width:50px;
+	height:100px;
+	margin:0 auto;
+	margin-top:50px;
+	background:url(../images/arrow.png) no-repeat -50px 0px;
+}
+.banner_right em.banner_right1 {
+	background:url(../images/arrow.png) no-repeat -50px -100px;
+}
+.banner_left:hover,.banner_right:hover{
+	background:url(../images/arrow-bg.png);
+}
+/* banner-end */
 .cont-box{
 	width:1200px;
 	margin:0 auto;
