--- a/css/index.css
+++ b/css/index.css
@@ -182,10 +182,12 @@ body{
 	color:#ff8c69;
 }
 .article-cont ul li .img-box{
+	display:block;
 	margin-bottom:30px;
 	width:100%;
 	height:400px;
 	overflow: hidden;
+	cursor:pointer;
 }
 .article-cont ul li .img-box img{
 	width:100%;
