--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -65,7 +65,7 @@ body{
 	text-align: center;
 }
 .main .section .about_msg{
-	width:1100px;
+	min-width:1100px;
 	color:#666;
 	font-size:24px;
 	line-height: 40px;
