--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -69,7 +69,7 @@ body{
 	color:#666;
 	font-size:24px;
 	line-height: 40px;
-	text-align: justify;
+	text-align: left;
 	text-indent: 48px;
 }
 .main .section .product{
