--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -66,11 +66,12 @@ body{
 }
 .main .section .about_msg{
 	min-width:1100px;
+}
+.main .section .about_msg>p{
 	color:#666;
 	font-size:24px;
 	line-height: 40px;
-	text-align: left;
-	text-indent: 48px;
+	text-align: center;
 }
 .main .section .product{
 	list-style: none;
