--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -29,8 +29,31 @@ body{
 }
 .header_cont .right_msg{
 	float:right;
+	margin-right: 80px;
 	font-size: 20px;
 	color:#999;
+}
+.header_cont .language{
+	float:right;
+	width:70px;
+	margin:25px 0;
+	overflow: hidden;
+}
+.header_cont .language a{
+	float:left;
+	display:block;
+	width:28px;
+	height:28px;
+	border:1px solid #666;
+	border-radius: 20px;
+	line-height: 28px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	color:#666;
+}
+.header_cont .language a.zh{
+	margin-right: 10px;
 }
 .banner{
 	width:100%;
