--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -96,21 +96,72 @@ body{
 	line-height: 40px;
 	text-align: center;
 }
-.main .section .product{
-	list-style: none;
-	margin-right:-50px;
-	margin-bottom:-50px;
-
+.contant{
+	width:1100px;
 }
-.main .section .product>li{
+.contant ul{
+	width:411px;
+	margin:0 auto;
+	margin-bottom:20px;
+	z-index: 999;
+}
+.contant ul li{
 	float:left;
-	width:333px;
-	height:246px;
-	margin-right: 50px;
-	margin-bottom:50px;
+	list-style: none;
+	text-align:center;
 }
-.main .section .product li img{
+.contant ul li a{
+	display:block;
+	width:135px;
+	height:60px;
+	color:#151515;
+	line-height: 60px;
+	text-align: center;
+	border:1px solid #eee;
+	text-decoration: none;
+}
+.contant .tab-cont .item-box{
+	margin-right: -25px;
+	height:auto;
+	display:none;	
+}
+.item-box .img_box{
+	float:left;
+	margin-right:25px;
+	margin-bottom:25px;
+	width:348px;
+	height:520px;
+	border:1px solid #eee;
+	text-decoration: none;
+}
+.item-box .img_box img{
 	width:100%;
+	height:100%;
+	transition:all 1s;
+}
+.item-box .img_box:hover{
+	border:1px solid teal;
+}
+.item-box .img_box p{
+	margin:30px;
+	color:teal;
+	font-size:24px;
+}
+.contant ul li.current{
+	background: teal;
+	color:#fff;
+}
+.contant ul li.current a{
+	color:#fff;
+}
+.clearfix:after {
+  	content: " ";
+  	display: block;
+  	clear: both;
+  	height: 0;
+}
+.clearfix {
+  	zoom: 1;
 }
 .main .section .custom{
 	margin:30px 0;
