--- a/yichenlong/css/index.css
+++ b/yichenlong/css/index.css
@@ -102,7 +102,7 @@ body{
 .contant ul{
 	width:411px;
 	margin:0 auto;
-	margin-bottom:20px;
+	margin-bottom:30px;
 	z-index: 999;
 }
 .contant ul li{
@@ -133,14 +133,19 @@ body{
 	height:520px;
 	border:1px solid #eee;
 	text-decoration: none;
+	transition:all 0.5s;
+}
+.item-box .img_box:hover{
+	transform:translateY(-15px);
 }
 .item-box .img_box img{
 	width:100%;
 	height:100%;
 	transition:all 1s;
+	border:0;
 }
 .item-box .img_box:hover{
-	border:1px solid teal;
+	border:1px solid #ccc;
 }
 .item-box .img_box p{
 	margin:30px;
